# Pathetic.ai

./: features_from_image.py  local_playground.ipynb  main.ipynb  main.py  main_old.ipynb  pyproject.toml  train_labels.pkl
